--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-calendario/calendario/__pycache__/settings.cpython-38.pyc
-calendario/calendario/__pycache__/__init__.cpython-38.pyc
-calendario/calendario/__pycache__/admin.cpython-38.pyc
-calendario/calendario/__pycache__/apps.cpython-38.pyc
-calendario/calendario/__pycache__/forms.cpython-38.pyc
-calendario/calendario/__pycache__/models.cpython-38.pyc
-calendario/calendario/__pycache__/urls.cpython-38.pyc
-calendario/calendario/__pycache__/views.cpython-38.pyc
 calendario/sesiones/migrations/*
 calendario/ckeditor_uploader/management/__pycache__/*
+calendario/sesiones/__pycache__/*
